--- a/test.kv
+++ b/test.kv
@@ -1,31 +1,81 @@
 #:kivy 1.11.1
-#python -m kivy.tools.kviewer C:\Users\yasus\Documents\Python_Scripts\kivyseries\test.kv
+#: import FadeTransition kivy.uix.screenmanager.FadeTransition
 
-TextWidget:
+RootWidget:
+    transition: FadeTransition()
+    Testwidget:
+    SecSc:
 
-<TextWidget@BoxLayout>:
+
+<Testwidget@BoxLayout>:
+    name: "tstw"
+    label1: label1
     BoxLayout:
-        orientation: "vertical"
+        orientation: 'vertical'
         size: root.size
 
+        ActionBar:
+            ActionView:
+                ActionPrevious:
+                    title: 'dntk'
+                    with_previous: False
+
+                ActionButton:
+                    text: 'krke'
+
         Label:
+            size_hint_y: 1
             id: label1
-            font_size: 68
-            text: root.tex
+            font_size: 35
+            text: root.text
+        
+        Button:
+            id: button1
+            text: "text01"
+            on_press: root.buttonClicked()
+
+        Button:
+            id: button2
+            text: "text02"
+            on_press: root.buttonClicked2()
+            
+        Button:
+            id: button3
+            text: "text03"
+            on_press: 
+                root.manager.get_screen("second").l0.text = root.label1.text
+                app.root.current = "second"
     
-# <TextWidget@StackLayout>:
+<SecSc>:
+    name: "second"
+    l0: l0
+    t0: t0
+    BoxLayout:
+        orientation: 'vertical'
+        size: root.size
+        ActionBar:
+            size_hint_y: 0.11
+            ActionView:
+                ActionPrevious:
+                    title: 'dntk'
+                    with_previous: True
+                    on_release: app.root.current = "tstw"
+
+                ActionButton:
+                    text: 'krke'
+        
+                
         BoxLayout:
-            # StackLayout:
-            # orientation: ""
+            TextInput:
+                id: t0
+                multiline: False
+                text: '123'
+            
+            Label:
+                id: l0
+                text: 'xxxxx'
 
             Button:
-                id: button1
-                text: "O"
-                font_size: 48
-                on_press: root.buttonclicked()
-
-            Button:
-                id: button2
-                text: "K"
-                font_size: 48
-                on_release: root.buttonclicked2()
+                id: b0
+                text: "measure"
+                on_release: root.txtmodify()
